@@ -1,1 +1,1 @@
-10.12.0-rc2
+10.12.0
